tests/constructor/constructor.exp
Error ------------------------------------------------------ constructor.js:6:19

Cannot expect number as the return type of function because number is
incompatible with implicitly-returned undefined.


Error ----------------------------------------------------- constructor.js:15:10

Cannot cast `new Foo(...)` to `Bar` because in type argument `T`, number is
incompatible with string.


Error ----------------------------------------------------- constructor.js:22:10

Cannot cast `new Baz(...)` to `Baz` because in type argument `T`, number is
incompatible with string.



Found 3 errors
